@@ -1,5 +1,13 @@
 2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thcoll/cweight.c (th_char_weight_()): Remove unnecessary check
+	of c's range that always yields true.
+
+	* src/thwchar/thwchar.c (uni2thai_ext_()): Fix loop condition that
+	always yielded true due to range of data type.
+
+2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thinp/thinp.c, src/thrend/thrend.c: Add missing <string.h>.
 
 2006-05-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>
@@ -829,13 +837,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.81 2006-07-03 04:43:56 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.82 2006-07-03 04:53:22 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.81 2006-07-03 04:43:56 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.82 2006-07-03 04:53:22 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
